--- a/fileadmin/templates/sass/styles.scss
+++ b/fileadmin/templates/sass/styles.scss
@@ -2,7 +2,7 @@
 @import "compass/css3";
 @import "compass/typography/links";
 @import "compass/utilities/general/clearfix";
-$experimental-support-for-opera: true; 
+$experimental-support-for-opera: true;
 
 /* Page dimensions and ratios */
 $page-collapsed-width: 40px;
@@ -30,16 +30,7 @@ $root-font-size: 16px;
 	font-family: Karla, sans-serif;
 }
 @mixin custom-underline {
-	position: relative;
-	&:after {
-		content: '';
-		width: 100%;
-		position: absolute;
-		left: 0;
-		bottom: 1px;
-		border-width: 0 0 1px;
-		border-style: solid;
-	}
+	box-shadow: inset 0 -1px 0;
 }
 
 /* Colors and element styling */
@@ -593,7 +584,7 @@ body.touch-device .stack, #stack-area.mode-list .stack {
 			vertical-align: baseline;
 		}
 	}
-	#btn-close, 
+	#btn-close,
 	#btn-info,
 	#btn-next-img,
 	#btn-previous-img {
@@ -738,7 +729,7 @@ body.touch-device .stack, #stack-area.mode-list .stack {
 #smallscreen-menu {
 	display: none;
 }
-/* 
+/*
 Begin specific style for Tablets and smaller PCs
 */
 @media only screen and (max-width: 1024px) {
@@ -815,8 +806,8 @@ Begin specific style for Tablets and smaller PCs
 /* End specific stlye for smaller PCs */
 
 
-/* 
-Begin specific stlye for small screens. 
+/*
+Begin specific stlye for small screens.
 This targets smartphones and small tablets in portrait mode
 */
 @media only screen and (max-width: 799px) {
@@ -1024,7 +1015,7 @@ This targets smartphones and small tablets in portrait mode
 			li {
 				min-height: 5rem;
 				border-bottom: 1px solid $accent-color-1;
-				color: $accent-color-1; 
+				color: $accent-color-1;
 				@include font-l;
 				line-height: 4.9rem;
 				overflow: hidden;
